# e57_processor

./: CMakeLists.txt  Dockerfile  docker_build.sh
cmake/modules/: FindLibE57.cmake
src/: e57_processor.cpp  e57processor.cpp
